# python-template-rust

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitignore  Cargo.toml  LICENSE  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/python_template_rust/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/wiki/: Installation.doctree  _Footer.doctree  _Sidebar.doctree
.doctrees/docs/wiki/contribute/: Build-from-Source.doctree  Contribute.doctree  Local-Development-Setup.doctree
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  docs.yaml  publish.yml
_sources/: index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/python_template_rust/: index.rst.txt
autoapi/: index.html
autoapi/python_template_rust/: index.html
autoapi/test_all/: index.html
docs/wiki/: Installation.html  Installation.md  _Footer.html  _Footer.md  _Sidebar.html  _Sidebar.md
docs/wiki/contribute/: Build-from-Source.html  Build-from-Source.md  Contribute.html  Contribute.md  Local-Development-Setup.html  Local-Development-Setup.md
python_template_rust/tests/: test_all.py
rust/: Cargo.toml  Makefile
rust/python/example/: mod.rs
rust/src/: lib.rs
rust_template/: __init__.py
rust_template/tests/: test_all.py
src/: lib.rs
src/example/: mod.rs
