[package]
name = "rust_template_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rust_template"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rust_template = { path = "./rust", version = "*" }
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true
