[package]
name = "python_template_rust_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "python_template_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
python_template_rust = { path = "./rust", version = "*" }
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true
