[package]
name = "rust_template"
version = "0.1.0"
authors = ["timkpaine <t.paine154@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/python-project-templates/rust"
description = "A Python/Rust project template"

[lib]
name = "rust_template"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.test.junit]
path = "junit.xml"

